--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Specific List</h1>
-<p>Here's your list for ....</p>
+<h1><%= @list.name %></h1>
+<p>Here's your list of movies for <%= @list.name %>...</p>
