--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Lists#new</h1>
-<p>Find me in app/views/lists/new.html.erb</p>
+<h1>Make a new list</h1>
+<p>Why not? Treat yourself! Make a list!</p>
+
+<%= simple_form_for(@list) do |f| %>
+  <%= f.input :name %>
+  <%= f.submit %>
+<% end %>
