--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,5 @@
 <h1><%= @list.name %></h1>
 <p>Here's your list of movies for <%= @list.name %>...</p>
+
+
+<%= link_to 'Back to Lists', lists_path %>
